<resources>
    <string name="app_name">RequestPermission</string>
    <string name="is_not_connected">No internet connection</string>
    <string name="dismiss">dismiss</string>
    <string name="service_name">Damri e-ticket</string>
    <string name="company_name">Damri</string>
    <string name="pilih_layanan">Silakan Pilih Layanan</string>
    <string name="angkutan_bandara">Bus Bandara</string>
    <string name="angkutan_akap">Bus Antar Kota</string>
    <string name="login">Login</string>
    <string name="dont_have_account">Belum punya akun ???</string>
    <string name="click_here">Daftar disini</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="phone_number">Phone number</string>
    <string name="register">Register</string>
    <string name="pria">Pria</string>
    <string name="wanita">Wanita</string>
    <string name="forgot">Lupa Password?</string>
    <string name="pilih_terminal_keberangkatan">Pilih Terminal Keberangkatan</string>
    <string name="cari">Cari terminal</string>
    <string name="pilih_terminal_tujuan">Pilih Terminal Tujuan</string>
    <string name="terminal_keberangkatan">Terminal Keberangkatan</string>
    <string name="terminal_tujuan">Terminal Tujuan</string>
    <string name="one_trip">One Trip</string>
    <string name="round_trip">Round Trip</string>
    <string name="tanggal_berangkat">Tanggal Berangkat</string>
    <string name="tanggal_pulang">Tanggal Pulang</string>
    <string name="pilih_tanggal">Pilih Tanggal</string>
    <string name="penumpang">Penumpang</string>
    <string name="pilih_rute">Jadwal Bus Bandara</string>
    <string name="bus_bandara">Damri Bus Bandara</string>
    <string name="bus_class">Executive</string>
    <string name="price">IDR 56.000,00</string>
    <string name="departure">Departure</string>
    <string name="destination">Destination</string>
    <string name="booking">Route Detail</string>
    <string name="input_data_penumpang">Masukkan data penumpang</string>
</resources>
