<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context=".Activity.RegisterActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="160dp"
                    android:layout_height="160dp"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/logo_damri" />

                <com.google.android.material.card.MaterialCardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="24dp"
                    android:layout_marginRight="24dp"
                    android:layout_marginBottom="16dp"
                    app:cardBackgroundColor="@android:color/white"
                    app:cardElevation="4dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <com.google.android.material.textfield.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            app:hintEnabled="false"
                            app:passwordToggleEnabled="true">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/input_firstname"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:background="@null"
                                android:drawableLeft="@drawable/ic_person_black_24dp"
                                android:drawablePadding="12dp"
                                android:hint="@string/first_name"
                                android:inputType="textPersonName"
                                android:padding="12dp"
                                android:paddingLeft="12dp" />

                        </com.google.android.material.textfield.TextInputLayout>

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:background="@android:color/darker_gray" />

                        <com.google.android.material.textfield.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            app:hintEnabled="false"
                            app:passwordToggleEnabled="true">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/input_lastname"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:background="@null"
                                android:drawableLeft="@drawable/ic_person_black_24dp"
                                android:drawablePadding="12dp"
                                android:hint="@string/last_name"
                                android:inputType="textPersonName"
                                android:padding="12dp"
                                android:paddingLeft="12dp" />

                        </com.google.android.material.textfield.TextInputLayout>

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:background="@android:color/darker_gray" />

                        <com.google.android.material.textfield.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            app:hintEnabled="false"
                            app:passwordToggleEnabled="true">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/input_phone_number"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:background="@null"
                                android:drawableLeft="@drawable/ic_contact_phone_black_24dp"
                                android:drawablePadding="12dp"
                                android:hint="@string/phone_number"
                                android:inputType="phone"
                                android:padding="12dp"
                                android:paddingLeft="12dp" />

                        </com.google.android.material.textfield.TextInputLayout>

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:background="@android:color/darker_gray" />

                        <RadioGroup
                            android:id="@+id/radio_grup"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@null"
                            android:gravity="center_vertical"
                            android:orientation="horizontal"
                            android:padding="12dp">

                            <RadioButton
                                android:id="@+id/rb_pria"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:text="@string/pria" />

                            <RadioButton
                                android:id="@+id/rb_wanita"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:text="@string/wanita" />

                        </RadioGroup>
                    </LinearLayout>
                </com.google.android.material.card.MaterialCardView>

                <com.google.android.material.card.MaterialCardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="24dp"
                    android:layout_marginRight="24dp"
                    android:layout_marginBottom="12dp"
                    app:cardBackgroundColor="@android:color/white"
                    app:cardElevation="4dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <com.google.android.material.textfield.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            app:hintEnabled="false"
                            app:passwordToggleEnabled="true">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/input_email"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:background="@null"
                                android:drawableLeft="@drawable/ic_email_black_24dp"
                                android:drawablePadding="12dp"
                                android:hint="@string/email"
                                android:inputType="textEmailAddress"
                                android:padding="12dp"
                                android:paddingLeft="12dp" />

                        </com.google.android.material.textfield.TextInputLayout>


                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:background="@android:color/darker_gray" />

                        <com.google.android.material.textfield.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            app:hintEnabled="false"
                            app:passwordToggleEnabled="true">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/input_password"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:background="@null"
                                android:drawableStart="@drawable/ic_vpn_key_black_24dp"
                                android:drawablePadding="12dp"
                                android:hint="@string/password"
                                android:inputType="textPassword"
                                android:padding="12dp"
                                android:paddingLeft="12dp"
                                tools:ignore="RtlCompat" />

                        </com.google.android.material.textfield.TextInputLayout>

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:background="@android:color/darker_gray" />


                        <com.google.android.material.textfield.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            app:hintEnabled="false"
                            app:passwordToggleEnabled="true">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/input_confirm_password"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:background="@null"
                                android:drawableStart="@drawable/ic_vpn_key_black_24dp"
                                android:drawablePadding="12dp"
                                android:hint="@string/confirm_password"
                                android:inputType="textPassword"
                                android:padding="12dp"
                                android:paddingLeft="12dp"
                                tools:ignore="RtlCompat" />

                        </com.google.android.material.textfield.TextInputLayout>
                    </LinearLayout>
                </com.google.android.material.card.MaterialCardView>

                <com.google.android.material.button.MaterialButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="24dp"
                    android:layout_marginRight="24dp"
                    android:onClick="doRegister"
                    android:paddingBottom="12dp"
                    android:text="@string/register" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</RelativeLayout>