<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context=".Activity.MainActivity">

    <LinearLayout
        android:id="@+id/linear_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="?attr/actionBarSize"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="fitXY"
            android:src="@drawable/bus_stop" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RadioGroup
                    android:id="@+id/radio_grup_trip"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="12dp"
                    android:layout_marginRight="12dp"
                    android:layout_marginBottom="6dp"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/rb_one_trip"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/one_trip" />

                    <RadioButton
                        android:id="@+id/rb_round_trip"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/round_trip" />

                </RadioGroup>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="12dp"
                    android:layout_marginRight="12dp"
                    app:cardElevation="6dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical"
                        android:paddingLeft="12dp"
                        android:paddingRight="12dp">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center_vertical"
                            android:paddingTop="4dp"
                            android:paddingBottom="4dp"
                            android:text="@string/terminal_keberangkatan"
                            android:textColor="@android:color/black"
                            android:textStyle="bold" />

                        <com.google.android.material.button.MaterialButton
                            android:id="@+id/tv_terminal_keberangkatan"
                            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="start|center_vertical"
                            android:onClick="showDialogListTerminalKeberangkatan"
                            android:text="@string/pilih_terminal_keberangkatan"
                            app:icon="@drawable/bus_green" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:orientation="horizontal">

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:paddingTop="4dp"
                                android:paddingBottom="4dp"
                                android:text="@string/terminal_tujuan"
                                android:textColor="@android:color/black"
                                android:textStyle="bold" />

                            <ImageView
                                android:id="@+id/button_switch"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:onClick="switchRoute"
                                android:src="@drawable/arrow" />
                        </LinearLayout>

                        <com.google.android.material.button.MaterialButton
                            android:id="@+id/tv_terminal_tujuan"
                            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center_vertical|start"
                            android:onClick="showDialogListTerminalTujuan"
                            android:text="@string/pilih_terminal_tujuan"
                            app:icon="@drawable/bus_red" />


                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <com.google.android.material.card.MaterialCardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="12dp"
                    app:cardElevation="6dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:paddingLeft="12dp"
                        android:paddingRight="12dp"
                        android:paddingBottom="8dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_margin="2dp"
                                android:layout_weight="1"
                                android:orientation="vertical">

                                <TextView
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:gravity="center_vertical"
                                    android:paddingTop="4dp"
                                    android:paddingBottom="4dp"
                                    android:text="@string/tanggal_berangkat"
                                    android:textColor="@android:color/black"
                                    android:textStyle="bold" />

                                <com.google.android.material.button.MaterialButton
                                    android:id="@+id/tv_tanggal_berangkat"
                                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:gravity="center_vertical"
                                    android:onClick="showDialogDateBerangkat"
                                    android:text="@string/pilih_tanggal"
                                    android:textSize="10sp"
                                    app:icon="@drawable/ic_date_range_black_24dp" />

                            </LinearLayout>

                            <LinearLayout
                                android:id="@+id/tanggal_pulang"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_margin="2dp"
                                android:layout_weight="1"
                                android:animateLayoutChanges="true"
                                android:orientation="vertical"
                                android:visibility="gone">

                                <TextView
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:gravity="center_vertical"
                                    android:paddingTop="4dp"
                                    android:paddingBottom="4dp"
                                    android:text="@string/tanggal_pulang"
                                    android:textColor="@android:color/black"
                                    android:textStyle="bold" />

                                <com.google.android.material.button.MaterialButton
                                    android:id="@+id/tv_tanggal_pulang"
                                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:gravity="center_vertical"
                                    android:onClick="showDialogDatePulang"
                                    android:text="@string/pilih_tanggal"
                                    android:textSize="10sp"
                                    app:icon="@drawable/ic_date_range_black_24dp" />

                            </LinearLayout>
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:paddingTop="2dp"
                            android:paddingBottom="2dp">

                            <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_vertical"
                                android:onClick="subPassenger"
                                android:src="@drawable/minus" />

                            <TextView
                                android:id="@+id/jumlah_penumpang"
                                style="@style/TextAppearance.MaterialComponents.Headline6"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:layout_marginLeft="48dp"
                                android:layout_marginRight="48dp"
                                android:gravity="center"
                                android:textStyle="bold" />

                            <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:onClick="addPassenger"
                                android:src="@drawable/plus" />
                        </LinearLayout>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:padding="4dp"
                            android:text="@string/penumpang"
                            android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle2" />
                    </LinearLayout>
                </com.google.android.material.card.MaterialCardView>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:visibility="visible">

        <com.google.android.material.bottomappbar.BottomAppBar
            android:id="@+id/bottom_app_bar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:layout_gravity="bottom"
            app:backgroundTint="@color/colorPrimary"
            app:hideOnScroll="true"
            app:menu="@menu/main_menu"
            app:navigationIcon="@drawable/ic_menu_black_24dp" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/button_cari_jadwal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="getRoute"
            android:src="@drawable/ic_search_white_24dp"
            app:fabSize="normal"
            app:layout_anchor="@id/bottom_app_bar" />
    </androidx.coordinatorlayout.widget.CoordinatorLayout>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/snackbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true" />
</RelativeLayout>